@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.16
 
+	- The scheduler would not accept print jobs sent to a
+	  stopped remote printer.
 	- The texttops filter incorrectly converted the page
 	  numbers in the prettyprint header to double-byte
 	  characters when printing a non-Unicode text file. This
